--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.6.11",
     "react": "^18.0.0",
+    "react-calendar": "^3.4.0",
     "react-dom": "^18.0.0",
     "react-firebase-hooks": "^5.0.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "store": "^2.0.12",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
